# semantic_change_detection

./: README.md  all_w_all_y_populismus.ipynb  df_mean_decade_demokratie.csv  df_mean_decade_populismus_all_w_all_y.csv  pyproject.toml
dataframes/: df_mean_decade_umwelt.csv  df_text_agrar.csv  df_text_anarchie.csv  df_text_arbeitsschutz.csv  df_text_autoritarismus.csv  df_text_konservatismus.csv  df_text_kosmopolitismus.csv  df_text_liberalismus.csv  df_text_naturschutz.csv  df_text_populismus.csv  df_text_raumordnung.csv  df_text_regionalismus.csv  df_text_revolutionäre.csv  df_text_toleranz.csv
df_demokratie/: df_vecs_anarchismus.csv
notebooks/: DataFrame grouped by YEAR Creation & Preprocessing.ipynb  Zeit_txt.ipynb  all_w_all_y_demokratie.ipynb  all_w_all_y_umwelt.ipynb  generating_woi_word_embeddings_word2vec.ipynb  get_textpassage.ipynb  get_vectors.ipynb
visualizations/: cosine_similarity_demokratie_ld_all_words.html  cosine_similarity_demokratie_ld_filtered.html  cosine_similarity_demokratie_word2word_decade.html  cosine_similarity_populismus_ld_all_words.html  cosine_similarity_populismus_ld_filtered.html  cosine_similarity_populismus_word2word_decade_all_words.html  cosine_similarity_umwelt_ld_all_words.html  cosine_similarity_umwelt_ld_filtered.html  cosine_similarity_umwelt_word2word_decade.html
