[tool.poetry]
name = "semantic-shift"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^1.5.3"
syntok = "^1.4.4"
optimum = "^1.6.1"
umap-learn = { version = "^0.5.3", extras = ["plot"] }
torch = "^1.13.1"
transformers = "^4.25.1"
pyzmq = "24.0.1"
jupyterlab = "^3.5.3"
ipywidgets = "^8.0.4"
onnxruntime = "^1.13.1"
onnx = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
